--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <title>Home</title>
-    <link rel="stylesheet" href="homepage.css">
-    <link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css">
+    <link href="resources/favicon.png" rel="shortcut icon" type="image/x-icon" />
 </head>
 <body>
     <div id="search">
