--- a/index.html
+++ b/index.html
@@ -4,89 +4,150 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
-    <title>Home</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="resources/favicon.png" rel="shortcut icon" type="image/x-icon" />
+    <title>Welcome, Yousef!</title>
+    <link href="resources/favicon.png" rel="icon" type="image/x-icon"/>
+    <link href="style.css" rel="stylesheet"/>
+    <script src="https://kit.fontawesome.com/ca7138c89a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="search">
         <input id="search-field" type="text" name="search-field"/>
     </div>
     <div class="container">
+        <nav class="header">
+            <div class="sub-header">
+                <a href="https://www.youtube.com/feed/subscriptions" target="_self">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+                <a href="https://mastodon.social/home" target="_self">
+                    <i class="fab fa-mastodon"></i>
+                </a>
+            </div>
+            <div class="sub-header">
+                <a href="https://github.com/" target="_self">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/" target="_self">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+            </div>
+            <div class="sub-header">
+                <a href="https://drive.google.com/drive/u/1/my-drive" target="_blank">
+                    <i class="fa-brands fa-google-drive"></i>
+                </a>
+                <a href="https://www.icloud.com/" target="_blank">
+                    <i class="fas fa-cloud"></i>
+                </a>
+            </div>
+        </nav>
+        <div class="title">
+            Welcome, Yousef!
+        </div>
         <div id="clock"></div>
         <div class="weather-container">
             <div class="row">
-                <div id="weather-description"class="inline"></div>
-                <div class="inline">-</div>
-                <div id="temp" class="inline"></div>
+                <div id="weather-description"></div>
+                &nbsp;-&nbsp;
+                <div id="temp"></div>
             </div>
         </div>
         <div class="bookmark-container">
             <div class="bookmark-set">
-                <div class="bookmark-title">Linux News</div>
+                <div class="title">
+                    Most Used
+                </div>
                 <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://distro.tube/" target="_blank">DistroTube.com</a>
-                    <a class="bookmark" href="https://www.linuxtoday.com/" target="_blank">LinuxToday</a>
-                    <a class="bookmark" href="https://www.linuxinsider.com/" target="_blank">LinuxInsider</a>
-                    <a class="bookmark" href="https://omgubuntu.co.uk/" target="_blank">OMG Ubuntu</a>
-                    <a class="bookmark" href="https://itsfoss.com/" target="_blank">It's Foss</a>
-                    <a class="bookmark" href="https://phoronix.com/" target="_blank">Phoronix</a>
-                    <a class="bookmark" href="https://www.zdnet.com/topic/linux/" target="_blank">ZDNet</a>
+                    <a class="bookmark" href="http://education.fcih.helwan.edu.eg/portal/student/dashboard" target="_self">
+                        <i class="fa fa-graduation-cap"></i>
+                        FCAIH Portal
+                    </a>
+                    <hr class="solid">
+                    <a class="bookmark" href="https://www.chess.com/" target="_self">
+                        <i class="fa fa-chess-pawn"></i>
+                        Chess.com
+                    </a>
+                    <a class="bookmark" href="https://lichess.org/" target="_self">
+                        <i class="fa fa-chess-knight"></i>
+                        lichess.org
+                    </a>
+                    <hr class="solid">
+                    <a class="bookmark" href="https://fmovies.to" target="_self">
+                        <i class="fa fa-clapperboard"></i>
+                        FMovies.to
+                    </a>
+                    <hr class="solid">
+                    <a class="bookmark" href="https://www.amazon.eg/-/en/" target="_self">
+                        <i class="fa-brands fa-amazon"></i>
+                        Amazon.eg
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="bookmark-container">
+            <div class="bookmark-set">
+                <div class="title">
+                    <img src="resources/arch.png" width="16px">rch Linux
+                </div>
+                <div class="bookmark-inner-container">
+                    <a class="bookmark" href="https://www.archlinux.org/" target="_self">
+                        Arch Homepage
+                    </a>
+                    <a class="bookmark" href="https://wiki.archlinux.org/" target="_self">
+                        Arch Wiki
+                    </a>
+                    <a class="bookmark" href="https://www.archlinux.org/packages/" target="_self">
+                        Arch Packages
+                    </a>
+                    <a class="bookmark" href="https://aur.archlinux.org/" target="_self">
+                        AUR Home
+                    </a>
+                    <a class="bookmark" href="https://bugs.archlinux.org/" target="_self">
+                        Arch Bugs
+                    </a>
+                    <a class="bookmark" href="https://bbs.archlinux.org/" target="_self">
+                        Arch Forums
+                    </a>
+                    <a class="bookmark" href="https://flathub.org" target="_self">
+                        <i class="fa fa-box"></i>
+                        Flathub
+                    </a>
                 </div>
             </div>
             <div class="bookmark-set">
-                <div class="bookmark-title">Arch Linux</div>
+                <div class="title">
+                    Reddit
+                    <i class="fa fa-reddit-alien"></i>
+                </div>
                 <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://www.archlinux.org/" target="_blank">Arch Homepage</a>
-                    <a class="bookmark" href="https://wiki.archlinux.org/" target="_blank">Arch Wiki</a>
-                    <a class="bookmark" href="https://www.archlinux.org/packages/" target="_blank">Arch Packages</a>
-                    <a class="bookmark" href="https://aur.archlinux.org/" target="_blank">AUR Home</a>
-                    <a class="bookmark" href="https://bugs.archlinux.org/" target="_blank">Arch Bugs</a>
-                    <a class="bookmark" href="https://bbs.archlinux.org/" target="_blank">Arch Forums</a>
-                    <a class="bookmark" href="https://www.archlinux.org/planet/" target="_blank">Planet Arch</a>
+                    <a class="bookmark" href="https://reddit.com/r/dankmemes" target="_self">
+                        /r/dankmemes
+                    </a>
+                    <a class="bookmark" href="https://reddit.com/r/compsci" target="_self">
+                        /r/compsci
+                    </a>
+                    <a class="bookmark" href="https://reddit.com/r/linux" target="_self">
+                        /r/linux
+                    </a>
+                    <a class="bookmark" href="https://reddit.com/r/archlinux" target="_self">
+                        /r/archlinux
+                    </a>
+                    <a class="bookmark" href="https://reddit.com/r/linuxmemes" target="_self">
+                        /r/linuxmemes
+                    </a>
+                    <a class="bookmark" href="https://reddit.com/r/unixporn" target="_self">
+                        /r/unixporn
+                    </a>
+                    <a class="bookmark" href="https://reddit.com/r/vim" target="_self">
+                        /r/vim
+                    </a>
                 </div>
             </div>
-            <div class="bookmark-set">
-                <div class="bookmark-title">Suckless</div>
-                <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://www.suckless.org/" target="_blank">Suckless Homepage</a>
-                    <a class="bookmark" href="https://git.suckless.org/" target="_blank">Suckless Source Code</a>
-                    <a class="bookmark" href="https://dwm.suckless.org/" target="_blank">dwm</a>
-                    <a class="bookmark" href="https://st.suckless.org/" target="_blank">st</a>
-                    <a class="bookmark" href="https://tools.suckless.org/dmenu/" target="_blank">dmenu</a>
-                    <a class="bookmark" href="https://surf.suckless.org/" target="_blank">surf</a>
-                    <a class="bookmark" href="https://tools.suckless.org/tabbed/" target="_blank">tabbed</a>
-                </div>
-            </div>
-            <div class="bookmark-set">
-                <div class="bookmark-title">Social & Video</div>
-                <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://youtube.com/c/DistroTube" target="_blank">Youtube</a>
-                    <a class="bookmark" href="https://lbry.tv/@DistroTube:2" target="_blank">LBRY</a>
-                    <a class="bookmark" href="https://www.patreon.com/distrotube" target="_blank">Patreon</a>
-                    <a class="bookmark" href="https://gitlab.com/dwt1" target="_blank">GitLab</a>
-                    <a class="bookmark" href="https://github.com" target="_blank">GitHub</a>
-                    <a class="bookmark" href="https://distrotoot.com" target="_blank">Mastodon</a>
-                    <a class="bookmark" href="https://diasp.org/stream" target="_blank">Diaspora</a>
-                    <a class="bookmark" href="https://netflix.com" target="_blank">Netflix</a>
-                </div>
-            </div>
-            <div class="bookmark-set">
-            <div class="bookmark-title">Reddit</div>
-                <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://reddit.com/r/linux" target="_blank">/r/linux</a>
-                    <a class="bookmark" href="https://reddit.com/r/archlinux" target="_blank">/r/archlinux</a>
-                    <a class="bookmark" href="https://reddit.com/r/commandline" target="_blank">/r/commandline</a>
-                    <a class="bookmark" href="https://reddit.com/r/linux4noobs" target="_blank">/r/linux4noobs</a>
-                    <a class="bookmark" href="https://reddit.com/r/linuxquestions" target="_blank">/r/linuxquestions</a>
-                    <a class="bookmark" href="https://reddit.com/r/linuxmemes" target="_blank">/r/linuxmemes</a>
-                    <a class="bookmark" href="https://reddit.com/r/suckless" target="_blank">/r/suckless</a>
-                    <a class="bookmark" href="https://reddit.com/r/unixporn" target="_blank">/r/unixporn</a>
-                    <a class="bookmark" href="https://reddit.com/r/vim" target="_blank">/r/vim</a>
-                    <a class="bookmark" href="https://reddit.com/r/emacs" target="_blank">/r/emacs</a>
-                </div>
-            </div>
+        </div>
+        <div class="footer">
+          <a href="https://github.com/YousefElGhoul/homepage">
+            <i class="fa-brands fa-github"></i>
+            Repo
+          </a>
         </div>
     </div>
 
@@ -95,7 +156,7 @@
         document.getElementById("search-field").addEventListener("keydown",  event => { 
             if (event.keyCode === 13) {
                 var val = document.getElementById("search-field").value;
-                window.open("https://google.com/search?q=" + val);
+                window.open("https://startpage.com/search?q=" + val);
             }
         });
         // Get current time and format
@@ -103,7 +164,7 @@
             let date = new Date(),
                 min = date.getMinutes(),
                 sec = date.getSeconds(),
-                hour = date.getHours();
+                hour = date.getHours()
 
             return "" + 
                 (hour < 10 ? ("0" + hour) : hour) + ":" + 
@@ -112,16 +173,16 @@
         }
 
         window.onload = () => {
-            let xhr = new XMLHttpRequest();
+			let xhr = new XMLHttpRequest();
             // Request to open weather map
-            xhr.open('GET', 'http://api.openweathermap.org/data/2.5/weather?id=4737316&units=imperial&appid=e5b292ae2f9dae5f29e11499c2d82ece');
+            xhr.open('GET', 'https://api.openweathermap.org/data/2.5/weather?id=360630&units=Metric&appid=5b16e5f0d839efcfbefec77dac2495b5');
             xhr.onload = () => {
                 if (xhr.readyState === 4) {
                     if (xhr.status === 200) {
                         let json = JSON.parse(xhr.responseText);
                         console.log(json);
-                        document.getElementById("temp").innerHTML = json.main.temp.toFixed(0) + " F";
-                        document.getElementById("weather-description").innerHTML = json.weather[0].description;
+                        document.getElementById("temp").innerHTML = json.main.temp.toFixed(0) + " C";
+                        document.getElementById("weather-description").innerHTML = json.weather[0].description + " ";
                     } else {
                         console.log('error msg: ' + xhr.status);
                     }
